Fix footer to the bottom and place it behind main content using z-index

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -7,7 +7,23 @@
 body {
     font-family: roboto;
 
-    background-color: rgb(239, 233, 225);
+    background-color: rgb(44, 41, 41);
+}
+
+main {
+    position: relative;
+    z-index: 2;
+    padding-bottom: 480px;
+    
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1;
+    height: 480px;
 }
 
 header {
@@ -73,6 +89,7 @@ span {
 
 .introduction-section {
     padding: 1rem;
+    background-color: rgb(239, 233, 225);
 }
 
 .intro-heading {
@@ -163,6 +180,7 @@ form button {
 form button {
     padding-right: 0.5rem;
 }
+
 
 .footer-container {
     background-color: rgb(44, 41, 41);
